<resources>
    <string name="app_name">健康管理アプリ</string>
    <string name="action_settings">健康管理アプリ設定</string>
    <string name="lbl_measurement_date">測定日付</string>
    <string name="lbl_year">年</string>
    <string name="lbl_month">月</string>
    <string name="lbl_wakeup_time">起床時刻</string>
    <string name="lbl_day">日</string>
    <string name="lbl_morning">午前</string>
    <string name="lbl_evening">午後</string>
    <string name="lbl_measurement_time">測定時刻</string>
    <string name="lbl_blood_pressure_max">最高血圧</string>
    <string name="lbl_blood_pressure_min">最低血圧</string>
    <string name="lbl_hour">時</string>
    <string name="lbl_hour_range">時間</string>
    <string name="lbl_minute">分</string>
    <string name="lbl_pulse_rate">脈拍</string>
    <string name="unit_pressure">mmHg</string>
    <string name="unit_pulse">拍/分</string>
    <string name="lbl_walking_count">歩数</string>
    <string name="unit_walking_count">歩</string>
    <string name="lbl_body_temper_time">体温測定時刻</string>
    <string name="lbl_body_temper">体温</string>
    <string name="unit_temper">℃</string>
    <string name="lbl_btn_ble_import">BLE</string>
    <string name="lbl_weather">天候</string>
    <string name="lbl_sleep_score">睡眠スコア</string>
    <string name="lbl_sleeping_time">睡眠時間</string>
    <string name="lbl_deep_sleeping_time">深い睡眠</string>
    <string name="lbl_midnight_toilet_visits">夜間トイレ回数</string>
    <string name="unit_count">回</string>
    <string name="lbl_drinks">飲料</string>
    <string name="chklbl_coffee">コーヒー</string>
    <string name="chklbl_tea">お茶</string>
    <string name="chklbl_diuretic_drink">その他(利尿作用有り)</string>
    <string name="chklbl_alcoho">アルコール</string>
    <string name="chklbl_nutrition_drink">栄養ドリンク</string>
    <string name="chklbl_sports_drink">スポーツドリンク(入浴後)</string>
    <string name="edit_hint_body_condition">健康状態メモ</string>
    <string name="chklbl_take_medicine">服薬有無</string>
    <string name="chklbl_bathing">入浴</string>
    <string name="chk_condition_memo_editable">編集可能にする</string>
    <string name="lbl_btn_save">保存</string>
    <string name="lbl_btn_registered">登録済み</string>
    <string name="alertdialogtitle_toiletvisits">回数入力</string>
    <string name="alertdialogtitle_sleepscore">スコア入力</string>
    <string name="alertdialogtitle_bloodpressure">血圧測定</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">取消し</string>
    <string name="init_show_date_value">2023 年 01 月 01 日</string>
    <string name="init_tag_date_value">2023&#8211;01&#8211;01</string>
    <string name="init_show_time_value">00 時 00 分</string>
    <string name="init_show_range_time_value">00 時間 00 分</string>
    <string name="init_tag_time_value">00:00</string>
    <string name="init_midnight_toilet_visits">1</string>
    <string name="init_sleep_score">80</string>
    <string name="init_bloodpressure_max">125</string>
    <string name="init_bloodpressure_min">75</string>
    <string name="init_pulse_rate">75</string>
    <string name="time_class_am">06:00</string>
    <string name="time_class_pm">22:00</string>
    <string name="format_show_date">%04d 年 %02d 月 %02d 日</string>
    <string name="format_show_time">%02d 時 %02d 分</string>
    <string name="format_show_range_time">%02d 時間 %02d 分</string>
    <string name="format_tag_date">%04d-%02d-%02d</string>
    <string name="format_tag_time">%02d:%02d</string>
    <string name="format_input_title">%sの入力</string>
    <string name="range_midnight_toiletvisits">0,10</string>
    <string name="range_sleep_score">20,200</string>
    <string name="range_bloodpressure_max">70,200</string>
    <string name="range_bloodpressure_min">50,150</string>
    <string name="range_pluse_rate">30,150</string>
    <string name="message_save_success">保存しました</string>
    <string name="warning_save_with_2reason">%sのJSONファイル保存失敗(%s)</string>
    <string name="message_register_success">登録しました</string>
    <string name="message_get_current_ok">取得しました</string>
    <string name="status_onchange_with_item">(*) %s (変更)</string>
    <string name="status_saved_datefmt">保存中(%04d年%02d月%02d日)</string>
    <string name="status_registered_datefmt">登録済み(%04d年%02d月%02d日)</string>
    <string name="status_last_registered_datefmt">最新登録日(%04d年%02d月%02d日)</string>
    <string name="dummy_status_text">ステータスライン</string>
    <string name="pref_app_top_fragment">appTopFragment</string>
    <string name="pref_saved_key">last_saved_date</string>
    <string name="pref_registered_key">last_registered_date</string>
    <string name="sharedpref_get_current_key">get_current_date</string>
    <string name="pref_first_register_day_key">first_register_day</string>
    <string name="last_saved_json_file">last_saved.json</string>
    <string name="latest_registered_json_file">latest_registered.json</string>
    <string name="sp_lbl_spbtn_save">保存</string>
    <string name="title_imgfrag_sm_hist">ヒストグラムの期間設定</string>
    <string name="warning_imgfrag_sm_hist_not_selected">未選択の期間が有ります。</string>
    <string name="warning_imgfrag_sm_hist_range">選択された期間に誤りがあります。</string>
    <string name="file_name_bp_line_ym">img_bp_line_ym.png</string>
    <string name="file_name_bp_line_2w">img_bp_line_2w.png</string>
    <string name="file_name_bp_bar_2w">img_bp_bar_2w.png</string>
    <string name="pref_key_bp_line_ym">img_bp_line_ym</string>
    <string name="pref_key_bp_line_2w">img_bp_line_2w</string>
    <string name="pref_key_bp_bar_2w">img_bp_bar_2w</string>
    <string name="pref_key_bp_stop_saved">frag_bp_stop_saved</string>
    <string name="pref_key_bp_radio_ym">frag_bp_radio_ym</string>
    <string name="pref_key_bp_radio_line">frag_bp_radio_line</string>
    <string name="pref_stat_bp_line_ym">frag_stat_bp_line_ym</string>
    <string name="pref_stat_bp_line_2w">frag_stat_bp_line_2w</string>
    <string name="pref_stat_bp_bar_2w">frag_stat_bp_bar_2w</string>
    <string name="pref_key_bp_spinner_selected">frag_bp_spinner_selected</string>
    <string name="file_name_sm_bar_ym">img_sm_bar_ym.png</string>
    <string name="file_name_sm_bar_2w">img_sm_bar_2w.png</string>
    <string name="file_name_sm_hist_range">img_sm_hist_range.png</string>
    <string name="pref_key_sm_stop_saved">frag_sm_stop_saved</string>
    <string name="pref_key_sm_bar_ym">img_sm_bar_ym</string>
    <string name="pref_key_sm_bar_2w">img_sm_bar_2w</string>
    <string name="pref_key_sm_hist_range">img_sm_hist_range</string>
    <string name="pref_key_sm_radio_2w">frag_sm_radio_2w</string>
    <string name="pref_key_sm_radio_ym">frag_sm_radio_ym</string>
    <string name="pref_key_sm_radio_range">frag_sm_radio_range</string>
    <string name="pref_stat_sm_bar_ym">frag_stat_sm_bar_ym</string>
    <string name="pref_stat_sm_bar_2w">frag_stat_sm_bar_2w</string>
    <string name="pref_stat_sm_hist_range">frag_stat_sm_hist_range</string>
    <string name="pref_key_sm_spinner_ym_selected">frag_sm_spinner_ym_selected</string>
    <string name="pref_key_sm_spinner_from_selected">frag_sm_spinner_from_selected</string>
    <string name="pref_key_sm_spinner_to_selected">frag_sm_spinner_to_selected</string>
    <string name="pref_value_stop_saved">saveRadioButtonsState</string>
    <string name="warning_need_email_address">ユーザ設定でメールアドレスを入力してください</string>
    <string name="warning_not_allow_future">未来日は保存・登録不可</string>
    <string name="init_responsestatus_value">Warning</string>
    <string name="warning_code_message">[%d] %s</string>
    <string name="warning_network_not_available">ネットワークが利用できません！</string>
    <string name="warning_register_with_2_reason">データ%sエラー (%s)</string>
    <string name="warning_getdata_with_reason">データ取得エラー (%s)</string>
    <string name="exception_with_reason">サーバーエラー (%s)</string>
    <string name="confirm_dialog_title">送信確認</string>
    <string name="confirm_message_with_send">%sデータを送信しても宜しいですか？</string>
    <string name="warning_required_dialog_title">入力必須項目</string>
    <string name="error_response_dialog_title">健康管理データリクエスト</string>
    <string name="warning_required_time">%sを設定してください</string>
    <string name="warning_required_edit">%sを入力してください</string>
    <string name="msg_post_ok_with_type">データを%sしました</string>
    <string name="msg_request_canceled_with_type">%sリクエスト取消し</string>
    <string name="msg_gettting_data">データ取得中&#8230;</string>
    <string name="msg_gettting_graph">画像取得中&#8230;</string>
    <string name="warning_not_up_to_date">変更ありません</string>
    <string name="warning_data_not_found">データ未登録</string>
    <string name="warning_data_already_resistered">データ登録済み</string>
    <string name="warning_unkown_with_reason">不明なエラー: %s</string>
    <string name="app_top_frag_title">健康管理データ登録</string>
    <string name="imgfrag_bp_app_title">血圧測定データグラフ表示</string>
    <string name="label_frag_bp_statistics">統計情報 (平均血圧: mmHg)</string>
    <string name="label_frag_stat_rec_size">件数</string>
    <string name="label_frag_bp_measure_am">午前測定</string>
    <string name="label_frag_bp_measure_pm">午後測定</string>
    <string name="value_frag_stat_rec_count_blank">----</string>
    <string name="imgfrag_sm_app_title">睡眠管理データグラフ表示</string>
    <string name="label_frag_sm_statistics">統計情報 (平均睡眠時間)</string>
    <string name="value_frag_sm_stat_sleeping_blank">--:--</string>
    <string name="value_frag_sm_stat_deep_blank">---</string>
    <string name="imgfrag_lbl_ym">月間</string>
    <string name="imgfrag_lbl_2w">２週間</string>
    <string name="img_content_description">Matplotlib output image</string>
    <string name="imgfrag_lbl_today">本日含む</string>
    <string name="imgfrag_lbl_graph_line">折線グラフ</string>
    <string name="imgfrag_lbl_graph_bar">棒グラフ</string>
    <string name="imgfrag_btn_lbl_get_request">最新取得</string>
    <string name="imgfrag_chk_lbl_save">画像保存</string>
    <string name="imgfrag_spiner_ym_prompt">年月選択</string>
    <string name="imgfrag_sm_lbl_graph_hist">ヒストグラム</string>
    <string name="imgfrag_sm_lbl_range_from">期間</string>
    <string name="imgfrag_sm_lbl_range_to">〜</string>
    <string name="pref_app_top_frag_title">ユーザー設定</string>
    <string name="pref_app_top_frag_edit_mail_title">メールアドレスの設定</string>
    <string name="pref_app_top_frag_dialog_title">メールアドレス</string>
    <string name="pref_app_top_frag_edit_main_summary">サーバー処理のためのユーザー情報設定</string>
    <string name="title_activity_app_top_settings">健康管理アプリ設定画面</string>
    <string name="pref_key_emailaddress">healthcare_user_email</string>
    <string name="pref_key_bp_target_max">bp_target_max</string>
    <string name="pref_key_bp_target_min">bp_target_min</string>
    <string name="pref_category_request_required_title">リクエスト必須設定</string>
    <string name="pref_category_graph_title">可視化画像設定</string>
    <string name="pref_graph_bloodpress_title">最高血圧・最低血圧のユーザー目標値 (任意)</string>
    <string name="pref_graph_bloodpress_summary">サーバーでは最高血圧は125, 最低血圧は75に目標値を設定しています。\nこの値を上書きする場合は設定します。</string>
    <string name="pref_bp_target_max_title">最高血圧 (mmHg)</string>
    <string name="pref_bp_target_min_title">最低血圧 (mmHg)</string>
    <string name="pref_bp_target_max_dialog_title">ユーザ目標値選択 (最高血圧)</string>
    <string name="pref_bp_target_min_dialog_title">ユーザ目標値選択 (最低血圧)</string>
</resources>