<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/frag_stat_padding"
    style="@style/StyleConstraintLayout">
    <!-- フレームのタイトル -->
    <TextView
        android:id="@+id/tvLabelSmStatistics"
        android:text="@string/label_frag_sm_statistics"
        android:layout_marginTop="@dimen/frag_stat_margin_start2"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!-- レコード件数 -->
    <TextView
        android:id="@+id/tvLabelSmRecCount"
        android:text="@string/label_frag_stat_rec_size"
        android:layout_marginStart="@dimen/frag_stat_margin_rec_size"
        style="@style/StyledTextViewTitle"
        app:layout_constraintStart_toEndOf="@id/tvLabelSmStatistics"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelSmStatistics"
        app:layout_constraintTop_toTopOf="@id/tvLabelSmStatistics"
        />
    <TextView
        android:id="@+id/tvFragSmRecCount"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:gravity="end"
        android:text="@string/value_frag_stat_rec_count_blank"
        style="@style/StyledTextViewTitle"
        app:layout_constraintStart_toEndOf="@id/tvLabelSmRecCount"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelSmStatistics"
        app:layout_constraintTop_toTopOf="@id/tvLabelSmStatistics"
        />

    <!-- 睡眠時間 -->
    <TextView
        android:id="@+id/tvLabelSleeping"
        android:layout_marginStart="@dimen/frag_stat_margin_left"
        android:layout_marginTop="@dimen/frag_stat_margin_top"
        android:text="@string/lbl_sleeping_time"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelSmStatistics"
        />
    <TextView
        android:id="@+id/tvSleepingTime"
        android:text="@string/value_frag_sm_stat_sleeping_blank"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewValue"
        app:layout_constraintStart_toEndOf="@id/tvLabelSleeping"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelSleeping"
        app:layout_constraintTop_toTopOf="@id/tvLabelSleeping"
        />
    <!-- 深い睡眠時間 -->
    <TextView
        android:id="@+id/tvLabelDeepSleeping"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:text="@string/lbl_deep_sleeping_time"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toEndOf="@id/tvSleepingTime"
        app:layout_constraintStart_toStartOf="@id/guideFragSmStatDeepStart"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelSleeping"
        app:layout_constraintTop_toTopOf="@id/tvLabelSleeping"
        />
    <TextView
        android:id="@+id/tvDeepSleepingTime"
        android:gravity="end"
        android:text="@string/value_frag_sm_stat_deep_blank"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewValue"
        app:layout_constraintStart_toEndOf="@id/tvLabelDeepSleeping"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelSleeping"
        app:layout_constraintTop_toTopOf="@id/tvLabelSleeping"
        />
    <!-- 単位: 分 -->
    <TextView
        android:text="@string/lbl_minute"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toEndOf="@id/tvDeepSleepingTime"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelSleeping"
        app:layout_constraintTop_toTopOf="@id/tvLabelSleeping"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideFragSmStatDeepStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="128dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
