<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/frag_top_radio_group_padding"
    style="@style/StyleConstraintLayout">

    <!-- 上段ラジオ選択グループ -->
    <RadioGroup
        android:id="@+id/radioGroupBpDateRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/radiogroup_margin_top"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <RadioButton
            android:id="@+id/radioBP2w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/imgfrag_lbl_2w"
            />
        <CheckBox
            android:id="@+id/chkIncludeBpToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/check_margin_end"
            android:text="@string/imgfrag_lbl_today"
            />
        <RadioButton
            android:id="@+id/radioBpYM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_margin_start"
            android:text="@string/imgfrag_lbl_ym"
            />
    </RadioGroup>
    <Spinner android:id="@+id/spinnerBpYearMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:layout_gravity="center"
        android:drawSelectorOnTop="true"
        android:prompt="@string/imgfrag_spiner_ym_prompt"
        style="@android:style/Widget.Material.Spinner.Underlined"
        app:layout_constraintStart_toEndOf="@id/radioGroupBpDateRange"
        app:layout_constraintBottom_toBottomOf="@id/radioGroupBpDateRange"
        app:layout_constraintTop_toTopOf="@id/radioGroupBpDateRange"
        />
    <!-- 下段ラジオ選択グループ -->
    <RadioGroup
        android:id="@+id/radioGroupBpGraphType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/radiogroup_margin_top"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupBpDateRange"
        >
        <RadioButton
            android:id="@+id/radioBpGraphLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="@dimen/radio_small"
            android:scaleY="@dimen/radio_small"
            android:checked="true"
            android:text="@string/imgfrag_lbl_graph_line"
            />
        <RadioButton
            android:id="@+id/radioBpGraphBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_margin_start"
            android:scaleX="@dimen/radio_small"
            android:scaleY="@dimen/radio_small"
            android:text="@string/imgfrag_lbl_graph_bar"
            />
    </RadioGroup>
    <Button
        android:id="@+id/btnBpGetRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/imgfrag_btn_lbl_get_request"
        style="@android:style/Widget.Material.Button.Colored"
        app:layout_constraintStart_toEndOf="@id/radioGroupBpGraphType"
        app:layout_constraintBottom_toBottomOf="@id/radioGroupBpGraphType"
        app:layout_constraintTop_toTopOf="@id/radioGroupBpGraphType"
        />
    <CheckBox
        android:id="@+id/chkBpSaveImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:scaleX="@dimen/check_small"
        android:scaleY="@dimen/check_small"
        android:checked="true"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/imgfrag_chk_lbl_save"
        app:layout_constraintStart_toEndOf="@id/btnBpGetRequest"
        app:layout_constraintBottom_toBottomOf="@id/radioGroupBpGraphType"
        app:layout_constraintTop_toTopOf="@id/radioGroupBpGraphType"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
