<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/frag_stat_padding"
    style="@style/StyleConstraintLayout">
    <!-- フレームのタイトル -->
    <TextView
        android:id="@+id/tvLabelBpStatistics"
        android:text="@string/label_frag_bp_statistics"
        android:layout_marginTop="@dimen/frag_stat_margin_start2"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!-- レコード件数 -->
    <TextView
        android:id="@+id/tvLabelBpRecCount"
        android:text="@string/label_frag_stat_rec_size"
        android:layout_marginStart="@dimen/frag_stat_margin_rec_size"
        style="@style/StyledTextViewTitle"
        app:layout_constraintStart_toEndOf="@id/tvLabelBpStatistics"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelBpStatistics"
        app:layout_constraintTop_toTopOf="@id/tvLabelBpStatistics"
        />
    <TextView
        android:id="@+id/tvFragBpRecCount"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:gravity="end"
        android:text="@string/value_frag_stat_rec_count_blank"
        style="@style/StyledTextViewTitle"
        app:layout_constraintStart_toEndOf="@id/tvLabelBpRecCount"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelBpStatistics"
        app:layout_constraintTop_toTopOf="@id/tvLabelBpStatistics"
        />

    <!-- 上段: 午前測定 -->
    <TextView
        android:id="@+id/tvLabelAM"
        android:layout_marginStart="@dimen/frag_stat_margin_left"
        android:layout_marginTop="@dimen/frag_stat_margin_top"
        android:text="@string/label_frag_bp_measure_am"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelBpStatistics"
        />
    <TextView
        android:id="@+id/tvLabelAmMax"
        android:text="@string/lbl_blood_pressure_max"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toEndOf="@id/tvLabelAM"
        app:layout_constraintStart_toStartOf="@id/guideFragBpStatBpMaxStart"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelAM"
        app:layout_constraintTop_toTopOf="@id/tvLabelAM"
        />
    <TextView
        android:id="@+id/tvAmMeanMax"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:gravity="end"
        android:text="@string/value_frag_stat_rec_count_blank"
        style="@style/StyledTextViewValue"
        app:layout_constraintStart_toEndOf="@id/tvLabelAmMax"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelAM"
        app:layout_constraintTop_toTopOf="@id/tvLabelAM"
        />
    <TextView
        android:id="@+id/tvLabelAmMin"
        android:text="@string/lbl_blood_pressure_min"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toEndOf="@id/tvAmMeanMax"
        app:layout_constraintStart_toStartOf="@id/guideFragBpStatBpMinStart"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelAM"
        app:layout_constraintTop_toTopOf="@id/tvLabelAM"
        />
    <TextView
        android:id="@+id/tvAmMeanMin"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:gravity="end"
        android:text="@string/value_frag_stat_rec_count_blank"
        style="@style/StyledTextViewValue"
        app:layout_constraintStart_toEndOf="@id/tvLabelAmMin"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelAM"
        app:layout_constraintTop_toTopOf="@id/tvLabelAM"
        />
    <!-- 下段: 午後測定 -->
    <TextView
        android:id="@+id/tvLabelPM"
        android:layout_marginStart="@dimen/frag_stat_margin_left"
        android:layout_marginTop="@dimen/frag_stat_margin_top"
        android:text="@string/label_frag_bp_measure_pm"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelAM"
        />
    <TextView
        android:id="@+id/tvLabelPmMax"
        android:text="@string/lbl_blood_pressure_max"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toEndOf="@id/tvLabelPM"
        app:layout_constraintStart_toStartOf="@id/guideFragBpStatBpMaxStart"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelPM"
        app:layout_constraintTop_toTopOf="@id/tvLabelPM"
        />
    <TextView
        android:id="@+id/tvPmMeanMax"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:gravity="end"
        android:text="@string/value_frag_stat_rec_count_blank"
        style="@style/StyledTextViewValue"
        app:layout_constraintStart_toEndOf="@id/tvLabelPmMax"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelPM"
        app:layout_constraintTop_toTopOf="@id/tvLabelPM"
        />
    <TextView
        android:id="@+id/tvLabelPmMin"
        android:text="@string/lbl_blood_pressure_min"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        style="@style/StyledTextViewCaption"
        app:layout_constraintStart_toEndOf="@id/tvPmMeanMax"
        app:layout_constraintStart_toStartOf="@id/guideFragBpStatBpMinStart"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelPM"
        app:layout_constraintTop_toTopOf="@id/tvLabelPM"
        />
    <TextView
        android:id="@+id/tvPmMeanMin"
        android:layout_marginStart="@dimen/frag_stat_margin_start2"
        android:gravity="end"
        android:text="@string/value_frag_stat_rec_count_blank"
        style="@style/StyledTextViewValue"
        app:layout_constraintStart_toEndOf="@id/tvLabelPmMin"
        app:layout_constraintBottom_toBottomOf="@id/tvLabelPM"
        app:layout_constraintTop_toTopOf="@id/tvLabelPM"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideFragBpStatBpMaxStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideFragBpStatBpMinStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="220dp" />
</androidx.constraintlayout.widget.ConstraintLayout>